WIP: Implement TIMEADD